fixed links on safari

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -4,10 +4,6 @@
     -webkit-font-smoothing: antialiased;
 }
 
-body {
-    overflow-x: hidden;
-}
-
 h1, h2 {
     text-transform: uppercase;
     font-family: $title-font;
